--- a/apps/api-service/package.json
+++ b/apps/api-service/package.json
@@ -5,7 +5,6 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "type": "module",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -29,18 +28,18 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@sophist/typescript-config": "workspace:*",
+    "@eslint/js": "^9.17.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@sophist/eslint-config": "workspace:*",
-    "@sophist/typescript-config": "workspace:*",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-jest": "^28.10.0",
     "globals": "^15.12.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
@@ -50,7 +49,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "typescript-eslint": "^8.15.0"
   },
   "jest": {
     "moduleFileExtensions": [
