--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,8 +6,7 @@
   "exports": {
     "./base": "./base.js",
     "./next-js": "./next.js",
-    "./react-internal": "./react-internal.js",
-    "./service.js": "./service.js"
+    "./react-internal": "./react-internal.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
