--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -15,6 +15,7 @@
     "format": "prisma format",
     "generate": "prisma generate",
     "lint": "eslint . --max-warnings 0",
+    "typecheck": "tsc --noEmit",
     "prebuild": "npm run generate",
     "predev": "npm run generate",
     "studio": "prisma studio"
