--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -27,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@s-test/eslint-config": "workspace:*",
     "@s-test/typescript-config": "workspace:*",
+    "@types/node": "^22.10.5",
     "eslint": "^9.18.0",
     "globals": "^15.12.0",
     "prisma": "^6.2.1",
