--- a/apps/api-service/tsconfig.json
+++ b/apps/api-service/tsconfig.json
@@ -8,7 +8,8 @@
     },
     "strict": true,
     "strictNullChecks": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "declaration": false
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
